--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>פרטי מתנדב/ת</title>
+    <title>פרטי מתנדב.ת</title>
 
     <style type="text/css">
         /*.dt-body-left{text-align:left;}*/
