--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -122,6 +122,8 @@
 
             $("#rp_vl_ride_month").click(on_report_click);
             $("#rp_vl_ride_year").click(on_report_click);
+            $("#rp_amuta_vls_week").click(on_report_click);
+            $("#rp_amuta_vls_per_pat").click(on_report_click);
 
             $('#thisWeekHeader').html("הסעות לשבוע " + thisWeekFirst)
 
@@ -316,8 +318,8 @@
                             <li>
                                 <span>לעמותה</span>
                                 <ul>
-                                    <li>מתנדבים שבועי</li>
-                                    <li>מתנדבים - פר חולה</li>
+                                    <li><a id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
+                                    <li><a id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -397,6 +399,24 @@
                                             <label class="col-sm-4">חודש</label>
                                             <div class="col-sm-8">
                                                 <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_WEEK">
+                            <div class="card-box">
+                                <div class="row" id="flashDiv">
+
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4">שבוע</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" template_id="select_week" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
 
