--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -338,7 +338,7 @@
                     </div>
                     <div class="col-sm-7">
                         <h1> תצוגה מקדימה</h1>
-                        <div class="card-box table-responsive">
+                        <div id="div_weeklyRides" style="display:none" class="card-box table-responsive">
                             <table id="weeklyRides" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
@@ -351,6 +351,18 @@
                                 </thead>
                                 <tbody></tbody>
                             </table>
+                        </div>
+                        <div id="div_table_amuta_vls_week" style="display:none" class="card-box table-responsive">
+                            <table id="table_amuta_vls_week"  class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th title="Region" class="dateCustomWidth">אזור</th>
+                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                            </div>
                             <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                             </div>
