--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -353,7 +353,7 @@
                             </table>
                         </div>
                         <div id="div_table_amuta_vls_week" style="display:none" class="card-box table-responsive">
-                            <table id="table_amuta_vls_week"  class="table table-striped table-bordered">
+                            <table id="table_amuta_vls_week" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
                                         <th title="Region" class="dateCustomWidth">אזור</th>
@@ -362,12 +362,25 @@
                                 </thead>
                                 <tbody></tbody>
                             </table>
-                            </div>
-                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
-                                <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
-                            </div>
-                            <br />
                         </div>
+                        <div id="div_table_amuta_vls_per_pat" style="display:none" class="card-box table-responsive">
+                            <table id="table_amuta_vls_per_pat" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th title="Date" class="timeCustomWidth">תאריך</th>
+                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                        <th title="Origin" class="timeCustomWidth">מוצא</th>
+                                        <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                        </div>
+                        <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
+                            <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+                        </div>
+                        <br />
+                    </div>
 
                     </div>
                 </div>
@@ -429,6 +442,24 @@
                                             <label class="col-sm-4">שבוע</label>
                                             <div class="col-sm-8">
                                                 <input type="text" template_id="select_week" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_PATIENT">
+                            <div class="card-box">
+                                <div class="row" id="flashDiv">
+
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4">חולה</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" template_id="select_patient" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
 
