--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -124,6 +124,7 @@
             $("#rp_vl_ride_year").click(on_report_click);
             $("#rp_amuta_vls_week").click(on_report_click);
             $("#rp_amuta_vls_per_pat").click(on_report_click);
+            $("#rp_amuta_vls_km").click(on_report_click);
 
             $('#thisWeekHeader').html("הסעות לשבוע " + thisWeekFirst)
 
@@ -320,6 +321,7 @@
                                 <ul>
                                     <li><a id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
                                     <li><a id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
+                                    <li><a id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -369,6 +371,20 @@
                                     <tr>
                                         <th title="Date" class="timeCustomWidth">תאריך</th>
                                         <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                        <th title="Origin" class="timeCustomWidth">מוצא</th>
+                                        <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                        </div>
+                        <div id="div_table_amuta_vls_km" style="display:none" class="card-box table-responsive">
+                            <table id="table_amuta_vls_km" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th title="Date" class="timeCustomWidth">תאריך</th>
+                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                        <th title="Patient" class="timeCustomWidth">חולה</th>
                                         <th title="Origin" class="timeCustomWidth">מוצא</th>
                                         <th title="Destionation" class="timeCustomWidth">יעד</th>
                                     </tr>
@@ -460,6 +476,24 @@
                                             <label class="col-sm-4">חולה</label>
                                             <div class="col-sm-8">
                                                 <input type="text" template_id="select_patient" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_YEAR">
+                            <div class="card-box">
+                                <div class="row" id="flashDiv">
+
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4">שנה</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" template_id="select_year" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
 
